MVC/public/assets/css/cvDropWindow.css
.cvdw_pageCover {
    background-color: rgba(255, 255, 255, 0);
    backdrop-filter: blur(7px);
    position: fixed;
    top: 0;
    left: 0;
    width: 100vw;
    height: 100vh;
    z-index: 40;
    justify-content: center;
    align-items: center;
    display: none;
}

.cvdw_pageCover.active {
    display: flex;
}

.drop_window {
    width: 50%;
    height: 80%;
    background: rgb(221, 235, 255);
    border: solid var(--mid) 5px;
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    border-radius: 10px;
    margin-top: 80px;
    position: relative;
    padding: 20px;
}

.form_btns {
    display: flex;
    justify-content: space-between;
    width: 100%;
}

.form_btns button {
    width: 150px;
    height: 70px;
    padding: 10px 20px;
    font-size: 2rem;
    font-weight: bold;
    bottom: 0px;
    border: none;
    border-radius: 10px;
    cursor: pointer;
    transition: 0.3s ease;
    background-image: var(--submit_btn_gradient);
    color: white;
}

.form_btns button:hover {
    transform: scale(1.1);
    opacity: 0.7;
}

/* ------------------------------------------------------- */
.upload-box {
    height: 65vh;
    flex: 1;
    border: 2px dashed #aaa;
    border-radius: 10px;
    background: white;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    text-align: center;
    transition: border 0.3s;
    margin-bottom: 20px;
}

.upload-box.dragover {
    border-color: #3b82f6;
    background: #f0f8ff;
}

.upload-box p {
    margin: 10px 0 0;
    font-size: 14px;
    color: #555;
}

.upload-box input {
    display: none;
}

.upload-btn {
    margin-top: 15px;
    padding: 10px 20px;
    border: none;
    background-image: var(--submit_btn_gradient);
    color: white;
    border-radius: 5px;
    cursor: pointer;
}

.file-list {
    margin-top: 15px;
    font-size: 13px;
    color: #333;
}

/* ------------------------------------------------------- */
@media (max-width: 600px) {
    .drop_window {
        width: 95%;
        height: 80%;
        margin-top: 0px;
    }

    .form_btns button {
        width: 110px;
        height: 55px;
        font-size: 1.5rem;
    }
}

